some actual progress on the app. Apparently you can't reference .net core apps from xamarin projects.

--- a/ImageSetCompression.AndroidApp/Resources/layout/app_bar_main.xml
+++ b/ImageSetCompression.AndroidApp/Resources/layout/app_bar_main.xml
@@ -19,7 +19,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include android:id="@+id/content_include" layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
