--- a/ImageSetCompression.AndroidApp/Resources/layout/content_main.xml
+++ b/ImageSetCompression.AndroidApp/Resources/layout/content_main.xml
@@ -1,16 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main">
-
-    <TextView
-        android:layout_width="wrap_content"
+    
+    <Button
+        android:text="Select base image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Hello World!" />
+        android:minHeight="25px"
+        android:id="@+id/selectBaseImage"
+        android:onClick="OnSelectBaseImage" />
 
-</RelativeLayout>
+    <Button
+        android:text="Select set images"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="25px"
+        android:id="@+id/selectSetImages"
+        android:onClick="OnSelectBaseImage" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout1">
+
+        <Button
+            android:text="Compress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:minHeight="25px"
+            android:id="@+id/compress"
+            android:onClick="OnSelectBaseImage" />
+
+        <Button
+            android:text="Decompress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:minHeight="25px"
+            android:id="@+id/decompress"
+            android:onClick="OnSelectBaseImage" />
+
+    </LinearLayout>
+    
+</LinearLayout>
