fixed error after renaming file

--- a/ImageSetCompression.AndroidApp/Resources/layout/app_bar_main.xml
+++ b/ImageSetCompression.AndroidApp/Resources/layout/app_bar_main.xml
@@ -19,6 +19,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include android:id="@+id/content_include" layout="@layout/content_main" />
+
+    <include android:id="@+id/content_include" layout="@layout/content_compress" />
 
 </android.support.design.widget.CoordinatorLayout>
