--- a/ImageSetCompression.AndroidApp/Resources/layout/fragment_view_image.xml
+++ b/ImageSetCompression.AndroidApp/Resources/layout/fragment_view_image.xml
@@ -10,12 +10,32 @@
         android:id="@+id/viewImageTitle"
         android:textAlignment="center"
         android:text="file name" />
-    
-    <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/viewImageView"
-        android:adjustViewBounds="true" />
 
+    
+    <RelativeLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/relativeLayout1">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewFragmentProgress"
+            android:paddingHorizontal="60dp"
+            android:max="100"
+            android:progress="1"
+            android:layout_centerVertical="true" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewImageView"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true" />
+
+    </RelativeLayout>
 </LinearLayout>
